# serialize-to-javascript

./: Cargo.toml  LICENSE-MIT  README.md
impl/: Cargo.toml
impl/src/: lib.rs
src/: lib.rs  private.rs
tests/: keygen.js  mixed.rs
